--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Test project for node and angular",
   "main": "index.js",
   "scripts": {
-    "start": "node index", 
+    "start": "node index",
     "server": "nodemon index"
   },
   "keywords": [
@@ -14,7 +14,10 @@
   "author": "Kateryna Pohorila",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.2"
+    "body-parser": "^1.19.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.2",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
